--- a/package.json
+++ b/package.json
@@ -52,5 +52,9 @@
     "npm": "^8.6.0",
     "tailwindcss": "^3.0.23",
     "tiptap-extensions": "^1.35.2"
+  },
+  "dependencies": {
+    "@tiptap/extension-color": "^2.0.0-beta.9",
+    "@tiptap/extension-text-style": "^2.0.0-beta.23"
   }
 }
